// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package crosskylabadmin.fleet;

option go_package = "fleet";

// Tracker service exposes rpcs to summarize the state of ChromeOS Skylab
// Swarming bot fleet.
service Tracker {
  // Filter out and queue the CrOS bots that require admin tasks Repair and Reset.
  rpc PushBotsForAdminTasks(PushBotsForAdminTasksRequest) returns (PushBotsForAdminTasksResponse);

  // Filter out and queue the labstation bots that require admin tasks Repair.
  rpc PushRepairJobsForLabstations(PushRepairJobsForLabstationsRequest) returns (PushRepairJobsForLabstationsResponse);

  // Report bots metrics.
  rpc ReportBots(ReportBotsRequest) returns (ReportBotsResponse);

  // Filter out and queue the CrOS bots to run admin tasks Audit.
  rpc PushBotsForAdminAuditTasks(PushBotsForAdminAuditTasksRequest) returns (PushBotsForAdminAuditTasksResponse);
}

message PushBotsForAdminTasksRequest {
  DutState target_dut_state = 1;
}

message PushBotsForAdminTasksResponse {
}

message PushRepairJobsForLabstationsRequest {
}

message PushRepairJobsForLabstationsResponse {
}

message ReportBotsRequest {
}

message ReportBotsResponse {
}

message PushBotsForAdminAuditTasksRequest {
}

message PushBotsForAdminAuditTasksResponse {
}

enum DutState {
  DutStateInvalid = 0;
  Ready = 1;
  NeedsCleanup = 2;
  NeedsRepair = 3;
  NeedsReset = 4;
  RepairFailed = 5;
}

enum Health {
  HealthInvalid = 0;

  // A Healthy bot may be used for external workload.
  Healthy = 1;

  // An Unhealthy bot is not usable for external workload.
  // Further classification of the problem is not available.
  Unhealthy = 2;

  // Coming soon ?...
  //   UnhealthyStuckInProvisionRepairLoop
  //   UnhealthyFailingProvisionFrequently
}

enum TaskType {
    Invalid = 0;
    Reset = 1;
    Cleanup = 2;
    Repair = 3;
}